--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -14,9 +14,9 @@
     </div>
     <br>
     <label for="password" class="lPass">Contraseña</label>
-    <input id="password" formControlName="password" class="form-control iPass" matInput type="password" [ngClass]="{ 'is-invalid': clicked && incorrect}" [ngClass]="{ 'is-invalid': clicked && f['password'].errors}">
+    <input id="password" formControlName="password" class="form-control iPass" matInput type="password" [ngClass]="{ 'is-invalid': clicked && f['password'].errors || incorrect}">
     <div *ngIf="clicked && f['password'].errors" class="invalid-feedback">
-      <div *ngIf="f['password'].errors['required']">El email es obligatorio</div>
+      <div *ngIf="f['password'].errors['required']">La contraseña es obligatorio</div>
     </div>
     <div *ngIf="clicked" class="invalid-feedback">
       <div *ngIf="incorrect">La contraseña o el correo son incorrectos</div>
