--- a/src/app/management/components/management/management.component.scss
+++ b/src/app/management/components/management/management.component.scss
@@ -1,15 +1,18 @@
-h1, div {font-family: var(--mainFont);}
-
-.managementHead{
-  background-color: rgb(245, 245, 245);
-  height:100px;
-  padding-top: 30px;
-  margin-bottom: 3rem;
-  border-top:solid 0.1px rgb(226, 226, 226);
-  border-bottom:solid 0.1px rgb(226, 226, 226);
+h1,
+div {
+  font-family: var(--mainFont);
 }
 
-.h1Head{
+.managementHead {
+  background-color: rgb(245, 245, 245);
+  height: 100px;
+  padding-top: 30px;
+  margin-bottom: 3rem;
+  border-top: solid 0.1px rgb(226, 226, 226);
+  border-bottom: solid 0.1px rgb(226, 226, 226);
+}
+
+.h1Head {
   margin-left: 50px;
 }
 
@@ -27,14 +30,22 @@ h1, div {font-family: var(--mainFont);}
   margin-top: 3px;
 }
 
-.cDirectiva{
+.cDirectiva {
   // margin-top: 100px;
 }
 
-.col{
+.col {
   text-align: center;
 }
 
-@media (max-width:980px){
-  .col{padding-left:40px;}
+h3 {
+  margin-top: 3rem;
+  text-align: center;
+  color: rgb(95, 95, 95);
+}
+
+@media (max-width: 980px) {
+  .col {
+    padding-left: 40px;
+  }
 }
