--- a/src/app/news/components/news-page/news-page.component.html
+++ b/src/app/news/components/news-page/news-page.component.html
@@ -8,15 +8,23 @@
   <button class="btn btn-outline-primary btnCerraS" (click)="logout()">Cerrar Sesión</button>
 </div>
 
-<div class="container container-cards">
-  <app-news-card
+<div *ngIf="news.length > 0; then thenBlock else elseBlock"></div>
+<ng-template #thenBlock>
+  <div class="container container-cards">
+    <app-news-card
       *ngFor="let new of news; let i = index" [new]="new" [date]="dates[i]" [idDoc]="idDocs[i]">
-  </app-news-card>
-</div>
+    </app-news-card>
+  </div>
 
-<div class="container-fluid contenedorButton d-flex">
+  <div class="container-fluid contenedorButton d-flex">
     <button class="container-fluid buttonAnterior" routerLink="/noticias">
-        <img class="img-buttonAnterior" src="/assets/icons/left-arrow.png" alt="Icono Flecha">
-        Anterior
+      <img class="img-buttonAnterior" src="/assets/icons/left-arrow.png" alt="Icono Flecha">
+      Anterior
     </button>
-</div>
+  </div>
+</ng-template>
+<ng-template #elseBlock>
+  <div class="container-without">
+    <h3>Aún no hay noticias :(</h3>
+  </div>
+</ng-template>
